kuberay/ray-cluster/ingress.yaml
# Ingress-Nginx installed first
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #ingress.kubernetes.io/force-ssl-redirect: "true"
    #ingress.kubernetes.io/ssl-redirect: "true"

    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # argocd backend using HTTPS

    # face to internet, recommend update to restrict access
    # nginx.ingress.kubernetes.io/whitelist-source-range: | 
    #   0.0.0.0/0

  name: ingress-raycluster
  namespace: dev-raycluster
spec:
  ingressClassName: nginx
  rules:
  - host: devray.pantherslabs.com
    http:
      paths:
      - backend:
          service:
            name: ray-cluster-kuberay-head-svc
            port:
              number: 8265
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - devrat.pantherslabs.com
    secretName: pantherslabs-tls
